--- a/hackathon/src/css/header.css
+++ b/hackathon/src/css/header.css
@@ -19,6 +19,10 @@
     height: 36px;
 }
 
+.header .icon-list {
+    padding-right: 12px;
+}
+
 @media screen and (max-width: 575px) {
     .header .search-bar {
         display: none;
