--- a/hackathon/src/css/header.css
+++ b/hackathon/src/css/header.css
@@ -3,6 +3,9 @@
     height: fit-content;
     width: 100%;
     padding: 9px 16px 8px 16px;
+    /* offset-x | offset-y | blur-radius | spread-radius | color */
+    /* box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2); */
+    border-bottom: 2px solid #e0e0e0;
 }
 
 .header .app-name {
